clusters/production/immich/ingressroute.yaml
---
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: immich
  namespace: immich
spec:
  entryPoints:
    - websecure
  routes:
    - kind: Rule
      match: Host(`photos.primed.io`)
      services:
        - name: immich
          port: 2283
  tls:
    secretName: immich-tls
